--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     </head>
     <body>
         <!-- Add the navigation bar -->
+        <p>Test update repository</p>
+        <div id="navigation-container"></div>
+        <div class="container">
+            <div class="row">
+                <div id="side-container"></div>
+                <div id="main-container"></div>
+            </div>
+        </div>
+        <div id="navigation-container"></div>
+        <div class="container">
+            <div class="row">
+                <div id="side-container"></div>
+                <div id="main-container"></div>
+            </div>
+        </div>
         <div id="navigation-container"></div>
         <div class="container">
             <div class="row">
